rgw: Corrected the logic for container stats calculation.

The values are being added twice resulting in incorrect stats.
Fixes http://tracker.ceph.com/issues/16188

Signed-off-by: Pritha Srivastava <prsrivas@redhat.com>